# solana-bot

./: .env.example  README.md  pyproject.toml  research.md
src/: db.py  dex_screener_scanner.py  env.py  keypair.py  main.py  market_data_streamer.py  memcoin_scanner.py  strategy_manager.py  trade_executor.py
src/system_tuning/: __init__.py  linux.py  windows.py
src/utils/: keygen.py
